<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?attr/common_bg_gray_value" >

    <include
        android:id="@+id/title_bar_layout"
        layout="@layout/title_bar" />

    <LinearLayout
        android:id="@+id/pv_et_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="?attr/common_bg_value"
        android:orientation="vertical"
        android:padding="12dp" >

        <EditText
            android:id="@+id/pv_et_account"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@null"
            android:digits="0123456789"
            android:hint="@string/please_input_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="?attr/article_title_value"
            android:textSize="16sp" />

        <View
            style="@style/SettingDivider"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="5dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/pv_et_code"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/please_input_code"
                android:maxLength="6"
                android:singleLine="true"
                android:textColor="?attr/article_title_value"
                android:textSize="16sp" />

            <Button
                android:id="@+id/pv_btn_getcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/common_btn_bg_blue"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/pv_btn_res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pv_et_layout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="@dimen/common_horizontal_margin"
        android:layout_marginRight="@dimen/common_horizontal_margin"
        android:background="@drawable/common_btn_bg_blue"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>