<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?attr/common_bg_white_value" >

    <include
        android:id="@+id/title_bar_layout"
        layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_bar_layout" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/ac_bg_color" >

                <RelativeLayout
                    android:id="@+id/ac_rl_nologin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible" >

                    <ImageView
                        android:id="@+id/ac_login_iv"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="35dp"
                        android:background="@drawable/person_head_portrait_not_log" />

                    <TextView
                        android:id="@+id/ac_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ac_login_iv"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/click_login"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ac_rl_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible" >

                    <ImageView
                        android:id="@+id/ac_iv_head"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="35dp"
                        android:background="@drawable/person_head_portrait_not_log" />

                    <TextView
                        android:id="@+id/ac_tv_name"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ac_iv_head"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="@string/click_login"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:id="@+id/rank_show_rl"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingRight="10dp" >

                            <TextView
                                android:id="@+id/ac_tv_level_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/person_btn_level_d"
                                android:drawablePadding="5dp"
                                android:gravity="center_vertical"
                                android:text="等级"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/ac_tv_level"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="16dp"
                                android:layout_toRightOf="@id/ac_tv_level_name"
                                android:drawableRight="@drawable/person_btn_levelenter"
                                android:gravity="center"
                                android:text="1"
                                android:textColor="@color/white" />
                        </RelativeLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/white" />

                        <RelativeLayout
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingRight="10dp" >

                            <TextView
                                android:id="@+id/ac_tv_rank_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/person_btn_rank_d"
                                android:drawablePadding="5dp"
                                android:gravity="center_vertical"
                                android:text="军衔"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/ac_tv_rank"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="16dp"
                                android:layout_toRightOf="@id/ac_tv_rank_name"
                                android:text="少尉"
                                android:textColor="@color/white" />
                        </RelativeLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/white" />

                        <RelativeLayout
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dp" >

                            <TextView
                                android:id="@+id/ac_tv_score_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/person_btn_inte_d"
                                android:drawablePadding="5dp"
                                android:gravity="center_vertical"
                                android:text="积分"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/ac_tv_score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="16dp"
                                android:layout_toRightOf="@id/ac_tv_score_name"
                                android:text="30"
                                android:textColor="@color/white" />
                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/ac_rl_headquart"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?attr/setting_btn_bg_state_value" >

                    <ImageView
                        android:id="@+id/ac_headquart_img"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/common_horizontal_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person_headquart" />

                    <TextView
                        style="@style/SettingChildText"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/ac_headquart_img"
                        android:text="@string/headquart" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/common_horizontal_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person_btn_enter" />
                </RelativeLayout>

                <View style="@style/SettingDivider" />

                <RelativeLayout
                    android:id="@+id/ac_rl_fav"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?attr/setting_btn_bg_state_value" >

                    <ImageView
                        android:id="@+id/ac_fav_img"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/common_horizontal_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person_collection" />

                    <TextView
                        style="@style/SettingChildText"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/ac_fav_img"
                        android:text="@string/myfav" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/common_horizontal_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person_btn_enter" />
                </RelativeLayout>

                <View style="@style/SettingDivider" />

                <RelativeLayout
                    android:id="@+id/ac_rl_comment"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?attr/setting_btn_bg_state_value" >

                    <ImageView
                        android:id="@+id/ac_comment_img"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/common_horizontal_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/my_comment" />

                    <TextView
                        style="@style/SettingChildText"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/ac_comment_img"
                        android:text="@string/mycomment" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/common_horizontal_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person_btn_enter" />
                </RelativeLayout>

                <View
                    android:id="@+id/ac_line_comment"
                    style="@style/SettingDivider" />

                <RelativeLayout
                    android:id="@+id/ac_rl_setting"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?attr/setting_btn_bg_state_value" >

                    <ImageView
                        android:id="@+id/ac_setting_img"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/common_horizontal_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person_set" />

                    <TextView
                        style="@style/SettingChildText"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/ac_setting_img"
                        android:text="@string/setting" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/common_horizontal_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person_btn_enter" />
                </RelativeLayout>

                <View style="@style/SettingDivider" />

                <RelativeLayout
                    android:id="@+id/ac_rl_shop"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?attr/setting_btn_bg_state_value" >

                    <ImageView
                        android:id="@+id/ac_shop_img"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/common_horizontal_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person_set" />

                    <TextView
                        style="@style/SettingChildText"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/ac_shop_img"
                        android:text="商店" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/common_horizontal_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person_btn_enter" />
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/ac_btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_horizontal_margin"
                android:layout_marginLeft="@dimen/common_horizontal_margin"
                android:layout_marginRight="@dimen/common_horizontal_margin"
                android:layout_marginTop="60dp"
                android:background="@drawable/common_btn_bg_blue"
                android:paddingBottom="8dp"
                android:paddingLeft="@dimen/common_horizontal_margin"
                android:paddingRight="@dimen/common_horizontal_margin"
                android:paddingTop="8dp"
                android:text="@string/exit"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>